# Matrix-Core-Kernel

./: README.md  pyproject.toml
.github/workflows/: matrix_core_ci.yml  matrix_core_release_asset.yml
docs/: MATRIX_CORE_RELEASE_COMMAND_CARD_v3_0.md  OFFICIAL_RELEASE_DISPATCH_HANDOFF_v2_8.md  POST_RELEASE_EVIDENCE_INTAKE_v3_1.md  RELEASE_ASSET_AND_KEY_CUSTODY_PROOF_v2_5.md  REMOTE_CI_REQUIREMENTS.md  REMOTE_IMPORT_EXECUTION_PLAN.md
examples/: complete_layered_structure_v0_2.json
examples/policies/: layer_0_policy.json  layer_1_policy.json  layer_2_policy.json  layer_3_policy.json  layer_4_policy.json  layer_6_policy.json  layer_7_policy.json  layer_8_policy.json  layer_9_policy.json  layer_five_policy.json  layer_minus1_policy.json  layer_minus2_policy.json  layer_minus3_policy.json
promotion/: matrix_core_level6_candidate_dossier_v2_4.json
release_assets/v2_0/: release_candidate_manifest.json
reports/: ci_pr_trigger_v1_9.json  ci_trigger_v1_9.json  connector_boundary_v2_9.json  post_release_evidence_intake_template_v3_1.json  remote_import_scaffold_v1_3.json
schemas/: official_asset_clean_install_proof_v2_5.schema.json  production_key_custody_statement_v2_5.schema.json  release_asset_proof_v2_5.schema.json
src/matrix_core_kernel/: cli.py  validation.py
tests/: test_matrix_core_remote_spine.py
